--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="website_image">
-            <img src="/image/301.png" alt="" />
+            <img src="image/301.png" alt="" />
           </div>
         </div>
         <div class="container">
@@ -93,14 +93,14 @@
             </div>
           </div>
           <div class="website_image">
-            <img src="/image/302.png" alt="" />
+            <img src="image/302.png" alt="" />
           </div>
         </div>
       </div>
       <div class="section3">
         <div class="container">
           <div class="website_image">
-            <img src="/image/303.jpg" alt="" />
+            <img src="image/303.jpg" alt="" />
           </div>
           <div class="website_text">
             <div class="title">REACT SITE</div>
@@ -133,12 +133,12 @@
             </div>
           </div>
           <div class="website_image">
-            <img src="/image/304.jpg" alt="" />
+            <img src="image/304.jpg" alt="" />
           </div>
         </div>
         <div class="container">
           <div class="website_image">
-            <img src="/image/305.jpg" alt="" />
+            <img src="image/305.jpg" alt="" />
           </div>
           <div class="website_text">
             <div class="title">PHP SITE</div>
